--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
-  functions = "src/functions"
+  functions = "netlify/functions"
   publish = "public"
   command = "npm run build"  # This should be your build command if you have one
 
 [[redirects]]
   from = "/api/*"
-  to = "/.netlify/functions/express-api/:splat"
+  to = "/.netlify/functions/api/:splat"
   status = 200
