--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   functions = "netlify/functions"
   publish = "public"
-  command = ""  
+  command = "npm run build"  
 
 [[redirects]]
   from = "/api/*"
