--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "node-cron": "^3.0.2",
     "nodemon": "^3.0.1",
     "serverless-http": "^3.2.0"
-  }
+  },
+  "engines": {
+    "node": "v18.7.0",
+    "npm": "9.4.0"
+ }
+ 
 }
